Update game controls: add support for Up Arrow key in instructions and optimize high score storage logic

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
         </div>
         <p>
-          Press the <b>Spacebar</b> to make Sher fly! <br />
+          Press <b>Spacebar / Up</b> to make Sher fly! <br />
           <b>Left / Right</b> Arrow Keys to move sideways. <br />
           Avoid the obstacles and score as much as you can.
         </p>
